--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -38,9 +38,9 @@ jobs:
     - name: Lint with flake8
       run: |
         pipenv run flake8 .
-    #- name: Test with pytest
-      #run: |
-        #pipenv run pytest pythonpro --cov=pythonpro
+    - name: Test with pytest
+      run: |
+        pipenv run pytest --cov=pypro
     #- name: Posting Coverage
       #env:
         #CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
